--- a/lib/Cargo.toml
+++ b/lib/Cargo.toml
@@ -54,6 +54,7 @@ itertools = { workspace = true }
 jj-lib-proc-macros = { workspace = true }
 maplit = { workspace = true }
 memmap2 = "0.9.9"
+mincdc = "0.1.0"
 once_cell = { workspace = true }
 pest = { workspace = true }
 pest_derive = { workspace = true }
